Bug 81445 - Accept or Reject dialog shows incorrect label for empty cell.
Summary: Accept or Reject dialog shows incorrect label for empty cell.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.6.1 rc
Hardware: Other All
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:4.4.0 target:4.3.1 target:4.2.7
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-07-16 23:00 UTC by Kohei Yoshida
Modified: 2014-07-17 07:23 UTC (History)
0 users

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kohei Yoshida 2014-07-16 23:00:00 UTC
1. Start a new document.
2. Select Edit -> Changes -> Record to start recording changes.
3. Put some value into any cell.
4. Go to Edit -> Changes -> Accept or Reject to launch the dialog.
5. Check the comment of the recorded change.  It reads something like

   (Cell B3 changed from 'B3' to '2')*

* the actual message may vary depending on the cell position and the new cell value.

But the message is supposed to be

   (Cell B3 changed from '<empty>' to '2')
Comment 1 Kohei Yoshida 2014-07-16 23:00:15 UTC
I have a fix.
Comment 2 Kohei Yoshida 2014-07-16 23:01:56 UTC
This is actually a regression from 4.0.  4.1 already had this bug.
Comment 3 Kohei Yoshida 2014-07-16 23:06:38 UTC
Fixed on master and sent request for backports to relevant branches.
Comment 4 Commit Notification 2014-07-17 00:01:07 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b50953df9829ef13601b98ae217102b123affcd0

fdo#81445: Write test for this.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2014-07-17 07:21:57 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=86fbaaecbc30b1d541c1c341e454d3052a0ebe8b&h=libreoffice-4-3

fdo#81445: Display correct label for empty cell.


It will be available in LibreOffice 4.3.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2014-07-17 07:23:44 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=61aabb7d814b634e29003d8b555938f40b6f6fb4&h=libreoffice-4-2

fdo#81445: Display correct label for empty cell.


It will be available in LibreOffice 4.2.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.