fdo#81445: Display correct label for empty cell.

Change-Id: I4f3e99b2231f7cd87daa27ef2dc47d3bf37cea57